@@ -109,6 +109,7 @@ Mantis ChangeLog
  * Added $g_show_notices
  * Added $g_show_warnings
  * Fixed bug that let you change your username to that of an already existing user
+ * Added core_config_API.php to handle obtaining config information
 
 2002.08.23  -  0.17.5
  * Fixed problem where you could see public bugs if all projects were marked private (#2341)
